# dx-cli

./: Cargo.toml  README.md  build.rs
bridge/: apple_script_bridge.h  apple_script_bridge.m  build-bridge.sh
libfffs/: Finder.h  fffs.c  fffs.h  fffs.m
src/: byte_buffer.rs  config.rs  ds_parser.rs  ds_result.rs  get-folder-size.template  iterator.rs  lib.rs  main.rs  main_test.rs  processor.rs
