[package]
name = "dx-cli"
version = "0.3.0"
edition = "2021"
authors = ["Abel Chalier <abel.chalier@gmail.com>"]
description = "faster dx with obj c ffi bindings"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "dx"
path = "src/main.rs"

[dependencies]
libc = "0.2.151"
bytesize = "1.3.0"
structopt = "0.3.26"
lazy_static = "1.4.0"
color-print = "0.3.5"
hex = "0.4.3"
regex = "1.10.3"
walkdir = "2.4.0"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
itertools = "0.12.1"
prettytable-rs = "0.10.0"
